frontend/src/styles/main.css
/* ... */
#root {
  min-height: 100vh;
  overflow-x: hidden;
}

/* 
  custom selectors are prefixed with a `_` to denote in the markup 
  that they were hand-authored, and do not come from tachyons.css
  or any other 3rd party source
*/
._header-global {
  height: calc(var(--unit) * 3);
  margin-bottom: calc(var(--unit) * 3)
}

._nav-global {
  display: none;
}

._nav-global > a {
  color: var(--black);
}

._button-expand-mobile-nav {
  display: block;
  position: fixed;
  top: 0;
  right: 0;
  z-index: var(--layer-12);
  background-color: var(--white);
  width: calc(var(--unit) * 3);
  height: calc(var(--unit) * 3);
  border: 1px solid var(--black);
  cursor: pointer;  
}

._button-expand-mobile-nav .hamburger-box {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0.6);
}

._button-expand-mobile-nav.hamburger:hover, 
._button-expand-mobile-nav.hamburger.is-active:hover {
  opacity: 1; /* verriding hamburger.css */
}

._button-expand-mobile-nav.is-active {
  background-color: var(--black);
  border-color: var(--black);
}

._button-expand-mobile-nav.is-active .hamburger-inner, 
._button-expand-mobile-nav.is-active .hamburger-inner:after {
  background-color: var(--white);
}

._modal-menu {
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: var(--white);
  /* background-size: var(--unit) var(--unit); */
  /* background-image: linear-gradient(to right, var(--white) .5px, transparent 0px), linear-gradient(to bottom, var(--white) .5px, transparent 0px); */
  position: fixed; 
  z-index: var(--layer-11);
}

._branding-global {
  height: calc(var(--unit) * 3);
  background-color: var(--white);
  padding-left: calc(var(--unit) * 3.5);
  background-image: url('./images/logo.svg');
  background-repeat: no-repeat;
  background-position-y: 50%;
  background-position-x: calc(var(--unit) * 0.7);
  background-size: calc(var(--unit) * 2.5);
}

._heading-welcome {
  height: calc(var(--unit) * 4);
  z-index: var(--layer-1);
}

._section-welcome {
  position: relative;
}

._inner-welcome {
  position: relative;
}

._blob-yellow {
  position: absolute;
  z-index: var(--layer-0);
  top: calc(var(--unit) * -2);
  left: calc(var(--unit) * 1);
  width: calc(var(--unit) * 10);
  height: calc(var(--unit) * 10);
}

._blob-green {
  position: absolute;
  z-index: var(--layer-0);
}

._bg-blob-green  {
  z-index: var(--layer-0);
  clip-path: url(#_mask-green);
  position: absolute;
  right: calc(var(--unit) * -8);
  top: calc(var(--unit) * -5);
}

._blob-black {
  transform: scale(0.4);
  position: absolute;
  top: calc(var(--unit) * -4);
  left: calc(var(--unit) * -12)
}

._article-info {
  position: relative;
  z-index: var(--layer-4);
  height: calc(var(--unit) * 3);
  padding-left: calc(var(--unit) * 3);
  background-color: var(--white);
  background-repeat: no-repeat;
  background-position-y: 50%;
  background-position-x: calc(var(--unit) * 0.8);
  background-size: calc(var(--unit) * 1.2);
}

._article-info._address {
  background-image: url('./images/location.svg');
}

._article-info._network {
  background-image: url('./images/wifi.svg');
}

._article-info._contact {
  background-image: url('./images/contact.svg');
}

._inner-get-here,
._inner-places,
._inner-studio {
  background-color: var(--white);
  z-index: var(--layer-10);
}

._wrapper-info {
  position: relative;
  /* z-index: var(--layer-1); */
  /* width: calc(var(--unit) * 15); */
  height: calc(var(--unit) * 9);
  overflow: visible;
}

._section-get-here {
  position: relative;
  /* z-index: var(--layer-1); */
  margin-top: calc(var(--unit) * 16);
  height: calc(var(--unit) * 26);
}

._header-get-here,
._header-places,
._header-studio {
  height: calc(var(--unit) * 3);
  padding-left: calc(var(--unit) * 1);
  background-color: var(--white);
}

._inner-get-here,
._inner-places,
._inner-studio {
}

._content-get-here {
  height: calc(var(--unit) * 30);
  overflow-y: scroll;
}

._items-get-here {
}

._item-get-here {
  
}

._image-sign {
  position: absolute;
  top: calc(var(--unit) * -10);
  left: calc(var(--unit) * 2);
  width: 200px;
  height: auto;
  z-index: var(--layer-1);
}

._image-sandy {
  position: absolute;
  top: calc(var(--unit) * -16);
  left: calc(var(--unit) * 8);
  width: 200px;
  height: auto;
  z-index: var(--layer-1);
}

._image-moon {
  position: absolute;
  top: calc(var(--unit) * -15);
  left: calc(var(--unit) * 11);
  width: 30px;
  height: auto;
  z-index: var(--layer-1);
}

._image-bridge {
  position: absolute;
  top: calc(var(--unit) * -16);
  left: calc(var(--unit) * 12);
  width: 180px;
  height: auto;
  z-index: var(--layer-0);
}

._image-tom {
  position: absolute;
  top: calc(var(--unit) * -11);
  left: calc(var(--unit) * 12.5);
  width: 120px;
  height: auto;
  z-index: var(--layer-2);
}

._image-tower {
  position: absolute;
  top: calc(var(--unit) * -13);
  left: calc(var(--unit) * 14);
  width: 130px;
  height: auto;
  z-index: var(--layer-0);
} 

._image-wrinkle {
  position: absolute;
  top: calc(var(--unit) * 13);
  left: calc(var(--unit) * -3);
  width: 130px;
  height: auto;
  z-index: var(--layer-12);
}

._image-polkaflat {
  position: absolute;
  top: calc(var(--unit) * 13);
  right: calc(var(--unit) * -2);
  width: 180px;
  height: auto;
  z-index: var(--layer-1);
}

._image-ocean-blob {
  position: absolute;
  top: calc(var(--unit) * 40);
  left: calc(var(--unit) * -2);
  width: 130px;
  height: auto;
  z-index: var(--layer-1);
}

._image-sun {
  position: absolute;
  top: calc(var(--unit) * 40);
  right: calc(var(--unit) * 0);
  width: 50px;
  height: auto;
  z-index: var(--layer-11);
}

._image-red-dot-1 {
  position: absolute;
  top: calc(var(--unit) * 33);
  right: calc(var(--unit) * 0.3);
  width: 30px;
  height: auto;
  z-index: var(--layer-11);
}

._image-red-dot-2 {
  position: absolute;
  top: calc(var(--unit) * 29);
  right: calc(var(--unit) * -0);
  width: 15px;
  height: auto;
  z-index: var(--layer-11);
}
/* ... */

